--- a/app/src/main/res/layout/app_portfolio.xml
+++ b/app/src/main/res/layout/app_portfolio.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="1"
-    android:background="@color/colorPrimary">
+    android:background="@color/backGroundPrimary">
 
     <TextView
         android:layout_width="match_parent"
@@ -15,6 +15,8 @@
         android:id="@+id/textView"
         android:layout_weight="0.07"
         android:fontFamily="@string/abc_font_family_headline_material"
+        android:textSize="30sp"
+        android:textColor="@color/titleColor"
         android:textAlignment="center" />
 
     <Button
