--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#FF5252</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="backGroundPrimary">#003031</color>
-    <color name="buttonsPrimary">#ffca28</color>
+    <color name="backGroundPrimary">#FFA000</color>
+    <color name="buttonsPrimary">#FFECB3</color>
+    <color name="titleColor">#212121</color>
 </resources>
