--- a/app/src/main/res/layout/app_portfolio.xml
+++ b/app/src/main/res/layout/app_portfolio.xml
@@ -20,67 +20,41 @@
         android:textAlignment="center" />
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+
+        style="@style/AggregatorButtons"
         android:text="@string/popular_movies"
         android:id="@+id/button"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.07"
-        android:layout_margin="5dp"
-        android:onClick="displayToastPopularMovies"
-        android:background="@color/buttonsPrimary"/>
+        android:onClick="displayToastPopularMovies"/>
+
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/AggregatorButtons"
         android:text="@string/stock_hawk"
         android:id="@+id/button2"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.07"
-        android:layout_margin="5dp"
-        android:onClick="displayToastStockHawk"
-        android:background="@color/buttonsPrimary"/>
+        android:onClick="displayToastStockHawk"/>
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/AggregatorButtons"
         android:text="@string/build_it_bigger"
         android:id="@+id/button3"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.07"
-        android:layout_margin="5dp"
-        android:onClick="displayToastBuildItBigger"
-        android:background="@color/buttonsPrimary"/>
+        android:onClick="displayToastBuildItBigger"/>
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/AggregatorButtons"
         android:text="@string/make_your_app_material"
         android:id="@+id/button4"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.07"
-        android:layout_margin="5dp"
-        android:onClick="displayToastMakeUrAppMaterial"
-        android:background="@color/buttonsPrimary"/>
+        android:onClick="displayToastMakeUrAppMaterial"/>
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/AggregatorButtons"
         android:text="@string/go_ubiquitous"
         android:id="@+id/button5"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.07"
-        android:layout_margin="5dp"
-        android:onClick="displayToastGoUbiquitous"
-        android:background="@color/buttonsPrimary"/>
+        android:onClick="displayToastGoUbiquitous"/>
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/AggregatorButtons"
         android:text="@string/capstone_my_own_app"
         android:id="@+id/button6"
-        android:layout_weight="0.07"
-        android:layout_margin="5dp"
-        android:onClick="displayToastCapstone"
-        android:background="@color/buttonsPrimary"/>
+        android:onClick="displayToastCapstone"/>
+
 </LinearLayout>
